--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,35 +4,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/default_background"
     tools:context=".MainActivity">
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="60dp"
+        android:background="@color/white">
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="12dp"
+            android:src="@drawable/flights_info"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:layout_marginStart="25dp"
-            android:textSize="20sp"
-            android:text="@string/airport"
-            android:textColor="@color/black"/>
-        <Spinner
-            android:id="@+id/airport_spinner"
-            android:layout_width="130dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:layout_marginStart="25dp"
-            android:background="@drawable/selected"
-            android:entries="@array/airport_array_tw" />
-        <Button
-            android:id="@+id/access_token"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Get Access Token"
-            android:layout_marginTop="100dp"
-            android:layout_marginStart="25dp"
-            android:background="@drawable/selected"/>
-    </RelativeLayout>
+            android:layout_marginStart="11dp"
+            android:layout_marginTop="9dp"
+            android:text="@string/fights_info"
+            android:textColor="@color/black"
+            android:textSize="30sp" />
+    </LinearLayout>
+    <FrameLayout
+        android:id="@+id/main_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
