--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="default_background">#3d3d3d</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="red">#FF0000</color>
+    <color name="blue_500">#78aeff</color>
+    <color name="t">#00000000</color>
+    <color name="green_300">#69BA6C</color>
+    <color name="yellow_300">#FFF176</color>
+    <color name="gray_text">#88FFFFFF</color>
+    <color name="blue_300">#256fa0</color>
 </resources>
